--- a/Google-DarkCalendar.user.css
+++ b/Google-DarkCalendar.user.css
@@ -484,6 +484,22 @@
     }
 }
 
+@-moz-document regexp("(?=.*?\\/myaccount.google.com)(?=.*?calendar.google.com).*") {
+    /* Inversion of images, svg graphics (avatars, icons) in the avatar menu */
+    *:not([data-date]):before,
+    img,
+    svg {
+        filter: invert(100%) hue-rotate(180deg) brightness(1.1) contrast(105%)!important;
+    }
+}
+
+@-moz-document regexp("(?=.*?\\/www.google.com)(?=.*?calendar.google.com).*") {
+    /* Inversion of Google Map */
+    #pane img{
+        filter: invert(100%) hue-rotate(180deg) brightness(1.1) contrast(105%)!important;
+    }
+}
+
 @-moz-document domain("google.com") {
     /* Inversion of Google Map */
     #map.map {
