--- a/Google-DarkCalendar.user.css
+++ b/Google-DarkCalendar.user.css
@@ -10,7 +10,7 @@
 
 @var color   font-color-all-day-events                     "Font color of all day events"                    #FFF
 @var color   font-color-past-all-day-events                "Font color of past all day events"               #20212461
-@var color   font-color-past-events-with-time              "Font color of past events with time"             #e8eaed
+@var color   font-color-past-events-with-time              "Font color of past events with time"             #666666
 @var color   font-color-events-month-view-with-time        "Font color of month view events with time"       #e8eaed
 @var color   font-color-next-events-week-view-with-time    "Font color of next week view events with time"   #e8eaed
 @var color   font-color-past-events-week-view-with-time    "Font color of past week view events with time"   #e8eaed
@@ -321,12 +321,12 @@
         font-weight: 900!important;
         color: var(--font-color-all-day-events) !important;
     }
-        
+
     /* Font of past all day events */
     .KF4T6b.UflSff {
         color: var(--font-color-past-all-day-events) !important;
     }
-    
+
     /* Font of events (in month view with time) */
     .KF4T6b.qqMC3e,
     .KF4T6b.smECzc {
@@ -452,7 +452,8 @@
     }
 
     /* Invesion of images in the right hand-side menu of "Contacts" menu */
-    .MJ58we {
+    .MJ58we,
+    .jmXUHb {
         filter: invert(100%) hue-rotate(180deg) brightness(1.1) contrast(105%)!important;
     }
 
@@ -505,6 +506,15 @@
 @-moz-document regexp("(?=.*?\\/www.google.com)(?=.*?calendar.google.com).*") {
     /* Inversion of Google Map */
     #pane img {
+        filter: invert(100%) hue-rotate(180deg) brightness(1.1) contrast(105%)!important;
+    }
+}
+
+@-moz-document regexp("(?=.*?\\/keep.google.com)(?=.*?calendar.google.com).*") {
+    /* Inversion of images, svg graphics (avatars, icons) */
+    *:not([data-date]):before,
+    img,
+    svg {
         filter: invert(100%) hue-rotate(180deg) brightness(1.1) contrast(105%)!important;
     }
 }
